2005-08-29  Florian Boor  <florian@kernelconcepts.de>

	* Release Version 0.48
	* Makefile: Remove Xserver, Xinit and Xsession to become part of
                    xserver-common.
	* familiar/control: Update dependencies.

2005-08-02  Florian Boor  <florian@kernelconcepts.de>

	* Xserver: Add support for Sharp Akita.
	* Xserver: Add support for Sharp Spitz.

2005-06-18  Phil Blundell  <pb@reciva.com>

	* Version 0.47 released.

2005-06-18  Phil Blundell  <pb@reciva.com>

	* Xinit: Fix syntax error in last change.

2005-06-17  Phil Blundell  <pb@reciva.com>

	* Version 0.46 released.

2005-06-17  Phil Blundell  <pb@reciva.com>

	Bug #1350:
	* Xserver: Add support for "Ramses".
	* gpe-dm.init: Try both /dev/fb/0 and /dev/fb0.
	* Xsession: Source rather than exec scripts in Xsession.d so that
	variable passing works.

2005-06-17  Phil Blundell  <pb@reciva.com>

	* Xserver: Avoid upsetting Xorg with unnecessary "-mouse" option.

	* Xinit: Set HOME=/home/root if it exists.

2005-06-02  Florian Boor  <florian@kernelconcepts.de>

	* Version 0.45 released.
	* Xserver: Support for OMAP based Nokia 770

2005-02-20  Phil Blundell  <philb@gnu.org>

	* Version 0.44 released.

2005-02-20  Phil Blundell  <philb@gnu.org>

	* Xserver (HOME): Delete definition.
	[machine=Shepherd/Husky/Corgi] (TSLIB_TSDEVICE): Likewise.

2005-01-29  Phil Blundell  <philb@gnu.org>

	* Version 0.43 released.

2005-01-27  Phil Blundell  <philb@gnu.org>

	* Xserver: Add -rgba flags for iPAQ H2200.

2004-12-31  Phil Blundell  <philb@gnu.org>

	* Version 0.42 released.

2004-12-31  Florian Boor  <florian@kernelconcepts.de>

	* Xserver: Added support for USB mouse.

2004-10-23  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.41 released.

2004-10-23  Phil Blundell  <pb@nexus.co.uk>

	* Xserver: Add support for Xorg.  Undo Florian's change of
	2004-10-15.

2004-10-15  Florian Boor  <florian@kernelconcepts.de>

	* Xserver: Added some bits for iPaq H2200.

2004-09-06  Phil Blundell  <pb@nexus.co.uk>
